<resources>
    <string name="app_name">IPassPlus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_processing">Full Processing</string>
    <string name="processing_scenario_for_obtaining_all_document_data">Processing scenario for obtaining all\ndocument data</string>
    <string name="procesing_scenario_for_obtaning_bank_card_data">Processing scenario for obtaning bank card data</string>
    <string name="procesing_scenario_for_obtaning_mrz_n_data">Processing scenario for obtaning MRZ data</string>
    <string name="procesing_scenario_for_obtaning_barcode_ndata">Processing scenario for obtaning\nbarcode data</string>
    <string name="procesing_scenario_for_obtaning_nvisaul_zone_ocr_results">Processing scenario for obtaning\nvisaul zone OCR results</string>
    <string name="menu">Menu</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="verification_statuses">Verification statuses</string>
    <string name="about_the_app">About the app</string>
    <string name="general">GENERAL</string>
    <string name="share_the_app">Share the app</string>
    <string name="review_the_app">Review the app</string>
    <string name="get_in_touch">GET IN TOUCH</string>
    <string name="contact_us">Contact us</string>
    <string name="help_center">Help Center</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="visit_our_website">Visit our website</string>
    <string name="view_on_google_play">View on Google Play</string>
    <string name="legal">LEGAL</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_ipass_app">Rate iPass App</string>
    <string name="tap_a_star_to_give_your_rating">Tap a star to give your rating</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="settingss">Settings</string>
    <string name="identity_verification">IDENTITY VERIFICATION</string>
    <string name="strResetAllAppSettingsConfirmation">This will reset all settings of the application</string>
    <string name="strResetAllAPISettingsConfirmation">This will reset all API settings</string>
    <string name="compare_the_portrait_from_the_document_with_the_selfie">Compare the portrait from the document with\nthe selfie</string>
    <string name="face_matchings">Face matching</string>
    <string name="liveness">Liveness</string>
    <string name="liveness_check">Liveness check</string>
    <string name="scanning_settings">SCANNING SETTINGS</string>
    <string name="camera_to_use">Camera to use</string>
    <string name="multipage_processing">Multipage processing</string>
    <string name="enable_multipage_document_processing">Enable multipage document processing</string>
    <string name="double_page_spread_processing">Double-page spread processing</string>
    <string name="enable_processing_of_a_document_double_page_spread">Enable processing of a document double-page\nspread</string>
    <string name="sound_and_vibration">SOUND AND VIBRATION</string>
    <string name="sound">Sound</string>
    <string name="make_a_sound_when_processing_is_finished">Make a sound when processing is finished</string>
    <string name="vibrate_when_processing_is_finished">Vibrate when processing is finished</string>
    <string name="vibration">Vibration</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="show_instructions">Show instructions</string>
    <string name="show_identity_document_scanning_instruction">Show identity document scanning\ninstruction</string>
    <string name="advance">Advanced</string>
    <string name="strResetAllSettings">Reset all settings</string>
    <string name="reset_all_settings">Reset all settings</string>
    <string name="reset">Reset</string>
    <string name="strCancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="cancels">CANCEL</string>
    <string name="verification_statusess">Verification statuses</string>
    <string name="id_document_verification">ID document verification</string>
    <string name="id_document_expiration_check">ID document expiration check</string>
    <string name="face_comparison_compare_facial_images_and_determines_whether_they_match">Face comparison (compare facial\nimages and determines whether\nthey match)</string>
    <string name="liveness_check_verifies_that_a_face_presented_to_a_mobile_device_is_a_live_human_being">Liveness check (verifies that a face\npresented to a mobile device is a\nlive human being)</string>
    <string name="about_the_apps">About the app</string>
    <string name="this_application_about_">This application allows you to read and verify data from identification documents (passports, IDcards, driver\'s licenses, residence permits, visas,boarding passes, etc.) and bank cards.\n\nPosition a document fully inside the frame, andit will be automatically detected, cropped and recognized. The document type will be detected automatically. The MRZ, visual zone and barcodeswill be recognized and parsed into text fields. Graphic fields will be automatically cropped.\n\nData verification is performed after reading, where applicable,and overall verification status is displayed.\n\nAll processing is performed completely offline, no data leaves your device.\n\nPlease contact us if you have any questions, issues\nor suggestions.</string>
    <string name="version">VERSION</string>
    <string name="versions">Version</string>
    <string name="api_version">API version</string>
    <string name="core_version">Core version</string>
    <string name="database_version">Database version</string>
    <string name="core_mode">Core mode</string>
    <string name="full">Full</string>
    <string name="document_list">Document list</string>
    <string name="face_sdk_version">Face SDK version</string>
    <string name="advance_settings">Advance settings</string>
    <string name="interface_settings">INTERFACE SETTINGS</string>
    <string name="capture_button">Capture Button</string>
    <string name="display_a_button_for_capturing_and_processing_a_single_frame">Display a button for capturing and processing a\nsingle frame</string>
    <string name="camera_switch_button">Camera Switch Button</string>
    <string name="display_a_button_for_switching_between_cameras_during_processing">Display a button for switching between\ncameras during processing</string>
    <string name="display_hints_durning_video_processing">Display hints durning video processing</string>
    <string name="hint_messages">Hint messages</string>
    <string name="help">Help</string>
    <string name="show_an_instructional_animation_as_scanning_starts">Show an instructional animation as scanning\nstarts</string>
    <string name="timeout">Timeout</string>
    <string name="timeout_starting_from_document_detection">Timeout starting\nfrom document detection</string>
    <string name="timeout_starting_from_document_type_identification">Timeout starting\nfrom document type\nidentification</string>
    <string name="pause_scanning_if_significan_phone_motion_is_detected">Pause scanning if significan phone motion is\ndetected</string>
    <string name="motion_detection">Motion detection</string>
    <string name="focusing_detection">Focusing detection</string>
    <string name="pause_scanning_while_camera_is_docusing_it_can_descrease_camera_processing_speed">Pause scanning while camera is docusing. It\ncan descrease camera processing speed</string>
    <string name="processing_modes">Processing modes</string>
    <string name="auto">Auto</string>
    <string name="capture_an_image_as_soon_as_document_boundaries_are_detected_used_for_device_with_poor_quality_video">Capture an image as soon as document\nboundaries are detected (used for device with\npoor-quality video)</string>
    <string name="capture_after_boundaries_detected">Capture after boundaries detected</string>
    <string name="camera_resolution">Camera resolution</string>
    <string name="adjust_zoom_level">Adjust zoom level</string>
    <string name="zoom_level">Zoom level</string>
    <string name="camera_api">Camera API</string>
    <string name="manual_crop">Manual crop</string>
    <string name="minimum_dpi">Minimum DPI</string>
    <string name="perspective_angle">Perspective angle</string>
    <string name="internal_image">Integral image</string>
    <string name="hologram_dectection">Hologram dectection</string>
    <string name="image_quality">Image quality</string>
    <string name="time_out">Timeout</string>
    <string name="timeout_document_detection">Timeout starting from document\ndetection</string>
    <string name="timeout_identification">Timeout starting from document type\nidentification</string>
    <string name="date_format">Date format</string>
    <string name="document_filter">Document filter</string>
    <string name="custom_parameters">Custom parameters</string>
    <string name="rfid_chip">RFID chip</string>
    <string name="debug">Debug</string>
    <string name="save_event_logs">Save event logs</string>
    <string name="save_event_log_to_the_device">Save event log to the device</string>
    <string name="save_images">Save images</string>
    <string name="save_images_for_debug_function">Save images (for debug function)</string>
    <string name="save_cropped_images_for_debug_function">Save cropped images (for debug\nfunction)</string>
    <string name="save_cropped_images">Save cropped images</string>
    <string name="report_event_logs">Report event logs</string>
    <string name="report_the_issue_to_our_support_team">Report the issue to our\nsupport team</string>
    <string name="show_metadata">Show metadata</string>
    <string name="show_complete_list_of_scenarios">Show complete list of scenarios</string>
    <string name="debug_setting">Debug settings</string>
    <string name="glares">Glares</string>
    <string name="focus">Focus</string>
    <string name="dpi_threshold">DPI threshold</string>
    <string name="color">Color</string>
    <string name="image_qualitys">Image quality</string>
    <string name="angle_threshold">Angle threshold</string>
    <string name="document_position_indent">Document position: Indent</string>
    <string name="the_minimum_indent_from_the_corners_of_the_document_to_the_borders_of_the_image">The minimum indent from the\ncorners of the document to the\nborders of the image</string>
    <string name="camera_to_use1">Camera to use</string>
    <string name="no_accessories_glass_mask_hat_etc">No accessories: glasses,\nmask, hat, etc.</string>
    <string name="camera_at_eye_level">Camera at eye level.</string>
    <string name="goo">Go</string>
    <string name="egypt_id_card_1">Egypt -Id Card #1</string>
    <string name="string_default">default</string>
    <string name="strAccessibilityCloseButton">Close</string>
    <string name="camera_apis">Camera API</string>
    <string name="camera2_api">Camera2 API</string>
    <string name="auto_selection">Auto selection</string>
    <string name="date_formats">Date Format</string>
    <string name="video_processing">Video processing</string>
    <string name="frame_processing">Frame processing</string>
    <string name="autos">Auto</string>
    <string name="report_event_logss">Report event logs</string>
    <string name="authentication_procedure_type">Authentication\nprocedure type</string>
    <string name="basic_security_messaging_procedure">Basic Security\nMessaging procedure</string>
    <string name="data_access_key">Data access key</string>
    <string name="data_access_key_value">Data access key value</string>
    <string name="priority_of_using_ds_certificates">Priority of using DS\nCertificates</string>
    <string name="save_rfid_session_to_the_device_for_debugging">Save RFID session to the device (for\ndebugging)</string>
    <string name="save_rfid_session">Save RFID session</string>
</resources>