<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightbg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">
        <ImageButton
            android:id="@+id/ibBackArrowDS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_arrow"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:text="@string/debug_setting"
            app:layout_constraintRight_toLeftOf="@id/ibBackArrowDS"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/robotomedium"
            />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/grey"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/llSaveEvent"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_menuview"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/rlSaveEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/tvSaveEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_event_logs"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:fontFamily="@font/robotoregular"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"/>

                    <TextView
                        android:id="@+id/tvSaveEventdescreption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvSaveEvent"
                        android:fontFamily="@font/robotolight"
                        android:layout_alignStart="@id/tvSaveEvent"
                        android:text="@string/save_event_log_to_the_device"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:textSize="@dimen/_9sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swSaveEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_4sdp"
                        app:thumbTint="@color/selector_switch_thumb"
                        app:trackTint="@color/selector_switch_track" />

                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_marginStart="@dimen/_10sdp"/>
                <RelativeLayout
                    android:id="@+id/rlSaveImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/tvSaveImages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_images"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:fontFamily="@font/robotoregular"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"/>

                    <TextView
                        android:id="@+id/tvtvSaveImagesdescreption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvSaveImages"
                        android:fontFamily="@font/robotolight"
                        android:layout_alignStart="@id/tvSaveImages"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:text="@string/save_images_for_debug_function"
                        android:textSize="@dimen/_9sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swSaveImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_4sdp"
                        app:thumbTint="@color/selector_switch_thumb"
                        app:trackTint="@color/selector_switch_track" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_10sdp"/>
                <RelativeLayout
                    android:id="@+id/rlSaveCroppedImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:padding="@dimen/_8sdp">
                    <TextView
                        android:id="@+id/tvSaveCroppedImages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_cropped_images"
                        android:textColor="@color/black"
                        android:fontFamily="@font/robotoregular"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"/>

                    <TextView
                        android:id="@+id/tvSaveCroppedImagesdescreption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvSaveCroppedImages"
                        android:fontFamily="@font/robotolight"
                        android:layout_alignStart="@id/tvSaveCroppedImages"
                        android:text="@string/save_cropped_images_for_debug_function"
                        android:textSize="@dimen/_9sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swSaveCroppedImages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_4sdp"
                        app:thumbTint="@color/selector_switch_thumb"
                        app:trackTint="@color/selector_switch_track" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_10sdp"/>

                <RelativeLayout
                    android:id="@+id/rlSaveRfidSession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:padding="@dimen/_8sdp">
                    <TextView
                        android:id="@+id/tvSaveRfidSession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_rfid_session"
                        android:textColor="@color/black"
                        android:fontFamily="@font/robotoregular"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"/>

                    <TextView
                        android:id="@+id/tvSaveRfidSessiondescreption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvSaveRfidSession"
                        android:fontFamily="@font/robotolight"
                        android:layout_alignStart="@id/tvSaveRfidSession"
                        android:text="@string/save_rfid_session_to_the_device_for_debugging"
                        android:textSize="@dimen/_9sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swtvSaveRfidSession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_4sdp"
                        app:thumbTint="@color/selector_switch_thumb"
                        app:trackTint="@color/selector_switch_track" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_10sdp"/>
                <RelativeLayout
                    android:id="@+id/rlReportEvent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:id="@+id/tvReportEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_event_logs"
                        android:fontFamily="@font/robotoregular"
                        android:textColor="@color/black"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:textSize="@dimen/_12sdp"/>
                    <TextView
                        android:id="@+id/tvReportEventdescreption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvReportEvent"
                        android:fontFamily="@font/robotolight"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:layout_alignStart="@id/tvReportEvent"
                        android:text="@string/report_the_issue_to_our_support_team"
                        android:textSize="@dimen/_9sdp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:src="@drawable/ic_next" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llShowData"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_menuview"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/rlShowMetaData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_6sdp">

                    <TextView
                        android:id="@+id/tvShowMetaData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:fontFamily="@font/robotoregular"
                        android:text="@string/show_metadata"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swShowMetaData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_6sdp"
                        app:thumbTint="@color/selector_switch_thumb"
                        app:trackTint="@color/selector_switch_track" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"

                    android:layout_marginStart="@dimen/_10sdp"/>
                <RelativeLayout
                    android:id="@+id/rlShowScenarioList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_6sdp"
                    >
                    <TextView
                        android:id="@+id/tvShowList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/show_complete_list_of_scenarios"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginTop="@dimen/_3sdp" android:layout_centerVertical="true"
                        android:fontFamily="@font/robotoregular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/swShowScenarioList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/_6sdp"
                        app:thumbTint="@color/selector_switch_thumb"
                        app:trackTint="@color/selector_switch_track" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>